--- a/public/notes.html
+++ b/public/notes.html
@@ -1,6 +1,6 @@
-<!-- NOTES PAGE (loads when user clicks "Take notes with Express" button) -->
 <!DOCTYPE html>
 <html lang="en-US">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,38 +24,44 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
 
-  <body>
+    <body>
     <nav class="navbar bg-info">
       <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
       <div class="icons">
-        <!-- Save icon -->
-        <i class="fas fa-save text-light save-note"></i>
-        <!-- New note icon -->
-        <i class="fas fa-plus text-light new-note"></i>
+        <button type="button" class="btn btn-outline-light btn-sm save-note">
+          <span class="fas fa-save"></span>
+          <span>Save Note</span>
+        </button>
+        <button type="button" class="btn btn-outline-light btn-sm new-note">
+          <span class="fas fa-edit"></span>
+          <span>New Note</span>
+        </button>
+        <button type="button" class="btn btn-sm btn-outline-danger clear-btn">
+          <span class="fas fa-times"></span>
+          <span>Clear Form</span>
+        </button>
       </div>
     </nav>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4 list-container">
+        <div class="col-4 list-container" id="list-container">
           <div class="card">
-            <!-- Where notes will be added when saved -->
-            <ul class="list-group"></ul>
+            <ul class="list-group" id="list-group"></ul>
           </div>
         </div>
         <div class="col-8">
-          <!-- New note title -->
-          <input
+          <form class="note-form">
+            <input
             class="note-title"
             placeholder="Note Title"
             maxlength="28"
             type="text"
-          />
-          <!-- New note text -->
-          <textarea class="note-textarea" placeholder="Note Text"></textarea>
+            />
+            <textarea class="note-textarea" placeholder="Note Text"></textarea>
+            </form>
         </div>
       </div>
     </div>
-    <!-- Script tag, linking index.js file -->
-    <script src="./assets/js/index.js"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
