updated undefined functions

--- a/public/notes.html
+++ b/public/notes.html
@@ -36,9 +36,9 @@
           <span class="fas fa-edit"></span>
           <span>New Note</span>
         </button>
-        <button type="button" class="btn btn-sm btn-outline-danger clear-btn">
+        <button type="button" class="btn btn-sm btn-outline-danger Delete-btn">
           <span class="fas fa-times"></span>
-          <span>Clear Form</span>
+          <span>Delete Form</span>
         </button>
       </div>
     </nav>
