--- a/public/notes.html
+++ b/public/notes.html
@@ -29,9 +29,13 @@
       <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
       <div class="icons">
         <!-- Save icon -->
-        <i class="fas fa-save text-light save-note"></i>
+        <i class="fas fa-save text-light saveNoteBtn">
+          <a class="saveNoteBtn" href="/public/notes.html" role="button"></a>
+        </i>
         <!-- New note icon -->
-        <i class="fas fa-plus text-light new-note"></i>
+        <i class="fas fa-plus text-light new-note">
+          <a class="new-note-btn" href="/public/notes.html" role="button"></a>
+          </i>
       </div>
     </nav>
     <div class="container-fluid">
