--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     </a>
   </nav>
   <div class="container">
-    <div style="margin-top: 80px;" class="jumbotron text-center">
+    <div class="jumbotron text-center jumbotron-margin">
       <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
       <h4 class="mt-4">Take notes with Express</h4>
       <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
